--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ pygmentsCodeFences=true
   sub = "Let's do something cool in Comp Sci!"
 
 [params.main]
-  latestPublishHeader = "My Latest Project"
+  latestPublishHeader = "The Goods"
 
 [taxonomies]
   design = "designs"
@@ -25,13 +25,13 @@ pygmentsCodeFences=true
 
 [params]
   breadcrumb = true
-  accentColor = "#FD3519"
+  accentColor = "#0077b6" #"#FD3519"
   mainSections = ['portfolio'] # values: ['post', 'portfolio'] only accept one section, to be displayed bellow 404
 
 [params.notFound]
   gopher = "/images/gopher.png" # checkout https://gopherize.me/
-  h1 = 'Bummer!'
-  p = "It seems that this page doesn't exist."
+  h1 = 'oh no!!'
+  p = "It seems that this page does not exist."
 
 [params.sections]
   # Define how your sections will be called
@@ -44,20 +44,20 @@ pygmentsCodeFences=true
   gradientOverlay = '' # default: rgba(0,0,0,0.4),rgba(0,0,0,0.4)
   logo = "" # - default "/images/edna-west.jpg"
 [params.assets]
-  favicon = ""
+  favicon = "/images/levelup.png"
   customCSS = ""
 
 [params.social]
-  github = "https://github.com/"
-  twitter = "https://twitter.com/"
-  linkedin = "https://www.linkedin.com/in/"
-  medium = "https://medium.com/"
-  codepen = "https://codepen.io/"
-  facebook = "https://www.facebook.com/"
-  youtube = "https://www.youtube.com/"
-  instagram = "https://www.instagram.com/"
-  gitlab = "https://gitlab.com/"
-  keybase = "https://keybase.io/"
+  github = "https://github.com/developmentAC"
+  # twitter = "https://twitter.com/"
+  # linkedin = "https://www.linkedin.com/in/"
+  # medium = "https://medium.com/"
+  # codepen = "https://codepen.io/"
+  # facebook = "https://www.facebook.com/"
+  youtube = "https://www.youtube.com/channel/UCgna6cx9NHq634c0JFyK_1A"
+  # instagram = "https://www.instagram.com/"
+  # gitlab = "https://gitlab.com/"
+  # keybase = "https://keybase.io/"
 
 [params.contact]
   email = ""
@@ -79,13 +79,13 @@ pygmentsCodeFences=true
   title = "Portfolio"
   url = "/portfolio/"
   weight = -110
-
-[[menu.main]]
-  identifier = "blog"
-  name = "Post"
-  title = "Blog section"
-  url = "/post/"
-  weight = -100
+#
+# [[menu.main]]
+#   identifier = "blog"
+#   name = "Post"
+#   title = "Blog section"
+#   url = "/post/"
+#   weight = -100
 
 [sitemap]
   changefreq = "monthly"
