Adding Google Analytics

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "I, Oliver Bonham-Carter, In June"
 theme = "personal-web"
 copyright="© Oliver Bonham-Carter"
-googleAnalytics = ""
+googleAnalytics = "G-S1L5B7KHCL"
 enableEmoji=true
 enableRobotsTXT=true
 pygmentsUseClasses=true
