--- a/config.toml
+++ b/config.toml
@@ -99,13 +99,13 @@ pygmentsCodeFences=true
   url = "/portfolio/"
   weight = -100
 
-#
-# [[menu.main]]
-#   identifier = "blog"
-#   name = "Post"
-#   title = "Blog section"
-#   url = "/post/"
-#   weight = -100
+
+ [[menu.main]]
+   identifier = "Projects"
+   name = "Projects"
+   title = "Projejcts"
+   url = "/projects/"
+   weight = -90
 
 [sitemap]
   changefreq = "monthly"
