Adding jupyter functionality.

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,9 @@
  publish = "public"
  command = """
  hugo --minify --gc" &&&
- pip install --pre jupyterlite
- jupyter lite init
- jupyter lite build
+ pip install --pre jupyterlite &&&
+ jupyter lite init &&&
+ jupyter lite build 
 """
 
  [build.environment]
