--- a/config.toml
+++ b/config.toml
@@ -122,12 +122,12 @@ pygmentsCodeFences=true
    url = "/forfun/itea/itea"
    weight = -90
 
-[[menu.main]]
-   identifier = "OutReach"
-   name = "OutReach"
-   title = "OutReach"
-   url = "/outreach/"
-   weight = -80
+#[[menu.main]]
+#   identifier = "OutReach"
+#   name = "OutReach"
+#   title = "OutReach"
+#   url = "/outreach/"
+#   weight = -80
 
 [sitemap]
   changefreq = "monthly"
